<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="bottom">



    <LinearLayout
        android:background="@color/purple_500"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/rlHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/_5sdp"
                app:srcCompat="@drawable/home" />

            <com.absolutecurepharma.customecomponent.CustomTextView
                android:id="@+id/tvHeaderText"
                app:font_name="NunitoBold.ttf"
                android:layout_toRightOf="@+id/ivHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_minus6sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Home"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />




        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/llOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ic_order"
              />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_orders"
                android:textColor="@color/grey_700"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>


        <LinearLayout
            android:id="@+id/llCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ic_shopping_cart"
                app:tint="@color/grey_600"
                />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_cart"
                android:textColor="@color/grey_700"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>


        <LinearLayout
            android:id="@+id/llWishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                app:srcCompat="@drawable/ic_favorite"
                />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_wishlist"
                android:textColor="@color/grey_700"
                android:textSize="@dimen/_11sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>


        <LinearLayout
            android:id="@+id/llAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                app:srcCompat="@drawable/ic_person"
                app:tint="@color/grey_600"
                />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_account"
                android:textColor="@color/grey_700"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                app:srcCompat="@drawable/share"
                app:tint="@color/grey_600"
                />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_app"
                android:textColor="@color/grey_700"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_10sdp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_300"/>

        <LinearLayout
        android:id="@+id/llLogout"
            android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            app:srcCompat="@drawable/ic_logout"
            app:tint="@color/grey_600"
            />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/grey_700"
            android:textSize="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>
    </LinearLayout>
    </LinearLayout>


</LinearLayout>
