<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_38sdp"
        android:layout_height="@dimen/_38sdp"
        android:padding="@dimen/_10sdp"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/header_color"/>

    <ImageView
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/_22sdp"
        android:textColor="@color/header_color"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please login to shop in app"
        android:textColor="@color/grey_700"
        android:layout_marginLeft="@dimen/_20sdp"/>
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rectangle"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="Email/Mobile No.*"
                    android:textColor="@color/grey_700"
                    />
                <EditText
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:textSize="@dimen/_11sdp"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:id="@+id/etMobile"/>

            </LinearLayout>

            <LinearLayout
               android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/rectangle"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:text="Password*"
                    android:textColor="@color/grey_700"
                    />
                <EditText
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:textSize="@dimen/_11sdp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:id="@+id/etPassword"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/header_color"
                android:layout_margin="@dimen/_5sdp"
                android:layout_gravity="end"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:paddingRight="@dimen/_5sdp"
                android:id="@+id/tvForgotPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/rectangle_button"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/login"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:id="@+id/btnLogin"/>



            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@color/grey_700"
                    android:layout_gravity="end"
                   android:textSize="@dimen/_12sdp"
                   />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/header_color"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:id="@+id/tvSignUp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>